--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -9,7 +9,7 @@
 @media screen and (max-width:767px){
     .navbar{
         background-color: black;
-        padding: 8px 20px 6px;
+        padding: 8px 20px 2px;
         color:white;
         display: flex;
         justify-content: space-between;
@@ -20,29 +20,47 @@
     }
     .navbar__list{
         display: none;
-    }
-    .intro__background{
-       background-image: url(../img/slideshow-1-mob.jpg);
-       background-size: 100% 95%;
+    }       
+    .background-base{
+        height: 400px;
     }
     .type-imgs-wrapper{
         grid-template-columns: 1fr;
+        padding-top: 0rem;
     }
     .technology-wrapper h1{
         font-size: 1.8rem;
-        padding-top: 2.5rem;
-        margin-bottom: 1.2rem;
+        padding-top: 1.5rem;
+        margin-bottom: 0rem;
     }
     .technology-small-part h2{
         font-size: 1.3rem;
     }
+    .technology-small-part{
+        top:1rem;
+    }
     .technology-type{
-        flex-direction: column;
+        position: relative;
+        overflow-x: visible;
+        width: 330px;
+        display: flex;
+        flex-direction: row;
+        margin:0.5rem 4rem 0rem 4rem;
     }
     .technology-type-link{
-        padding: 0.5rem;
         color: grey;
         font-size: 1rem;
+        text-align: center;
+        width: 100%; 
+        padding: 0 0 1rem 0;
+    }
+    .technology-type .techactive{
+        border:none;
+        font-weight: 600;
+    }
+    .technology-info img{
+        margin-top: 10px;
+        width: 580px;
     }
     .btn-more{
         width: 12rem;
@@ -159,7 +177,7 @@
         font-size: 0.9rem;
     }
     .footer-text{
-        font-size: 0.9rem;
+        font-size: 0.8rem;
     }
 
     /*SP Res*/
@@ -171,10 +189,10 @@
         position: relative;
     }
     .support-text{
-        margin-top: 3rem;
+        margin-top: 2rem;
     }
     .support-text h1{
-        font-size: 1.8rem;
+        font-size: 1.6rem;
         font-weight: 500;
         margin-bottom: 0.3rem;
     }
@@ -184,7 +202,7 @@
     }
     .support-text input{
         width: 280px;
-        height: 45px;
+        height: 40px;
         font-size: 1rem;
     }
     .services-wrapper{
@@ -255,14 +273,14 @@
         font-size: 1.4rem;
     }
     .support-form p{
-        font-size: 1.2rem;
+        font-size: 1.1rem;
     }
     .form{
         width: 300px;
         margin: auto;
     }    
     .form>form>div>label{
-        font-weight: 500;
+        font-weight: 600;
         font-size: 1.2rem;
     }
     .form>form>div>input{
