--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,7 +50,7 @@ a{
     margin: 0 2px;
     background-color: #b1b1b1;
     border-radius: 50%;
-    display: inline-block;
+    display: none;
     transition: background-color 0.8s ease;
 }
   
@@ -553,6 +553,7 @@ a{
     line-height: 1.8rem;
 }
 
+
 /*Contacts*/
 .contact{
     background-image: linear-gradient(rgb(246, 244, 244),rgb(231, 230, 230));
@@ -693,6 +694,113 @@ a{
     cursor: pointer;
     padding-bottom: 2rem;
 }
+
+.product__detail--wrapper{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 100%;
+    padding: 120px 130px ;
+    background-color:#F7F7F7;
+    margin-top: 50px;
+}
+
+.product__detail{
+    padding:30px 30px 40px 30px;
+    background-color:white;
+    margin:  20px;
+    cursor: pointer;
+    align-items: center;
+    text-align: center;
+    transition: 0.3s ease-in-out;
+}
+
+.product__nav--item-wrapper{
+    margin:0;
+}
+
+.product__img img{
+    height:160px;
+    align-items: center;
+    text-align: center;
+}
+
+.product__name{
+    margin-top:10px;
+    align-items: center;
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.product__btn{
+    margin-top: 10px;
+    font-weight: 500;
+    height:2.5rem;
+    width: 10rem;
+    border: 1px solid white;
+    border-radius: 2rem;
+    font-size: 1.2rem;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+    outline: none;
+    background-color: blue;
+    display: none;
+}
+
+.product__detail:hover{
+    box-shadow: 0 0 10px 4px #c3c3c3;
+}
+
+.product__detail:hover + .product__btn{
+    display:block;
+}
+
+.product__foryou{
+   display: grid;
+   grid-template-columns:1fr 1fr;
+    margin:0 130px;
+    padding-top: 50px;
+}
+
+.product__foryou--img{
+    padding-left:40px;
+}
+
+.product__foryou--img img{
+    vertical-align: middle;
+}
+
+.product__foryou--title{
+    padding: 20% 20% 20% 20%;
+}
+
+.product__foryou--title p{
+    font-size:2.5rem;
+    font-weight:800;
+    line-height: 50px;
+}
+
+.compare-btn{
+    margin-top: 20px;
+    font-weight: 500;
+    height:2.5rem;
+    width: 10rem;
+    border: 1px solid black;
+    border-radius: 2rem;
+    font-size: 1.2rem;
+    color: black;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+    outline: none;
+    background-color: transparent;
+}
+
+.compare-btn:hover{
+    color:white;
+    background-color: #337ab7;
+    border: 1px solid white;
+}
+
 
 /* .product-video-wrapper video:hover{
     transform: scale(1.1);
